swagger for create scan
